--- a/pricolla/app/views/layouts/pk.html.erb
+++ b/pricolla/app/views/layouts/pk.html.erb
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="style.css">
+  <%= stylesheet_link_tag "pk", :media => "all" %>
   <script src="http://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv-printshiv.min.js"></script>
   <title>ポケモン</title>
 </head>
@@ -13,13 +13,13 @@
 <body>
 <!--ポケモンのフレーム-->
 <div class="pk_frame">
-  <img src="images/pk_frame.png">
+  <%= image_tag 'pk_frame.png' %>
 </div>
 <!---->
 
 <!--フレームの画像-->
 <div class="pk_frame_img">
-  <img src="images/picture.jpg">
+  <%= image_tag @picture.photo.url %>
 </div>
 <!---->
 
@@ -55,7 +55,7 @@
 
 <!--あしあと-->
 <div class="asiato">
-  <img src="images/ashiato3.png">
+  <%= image_tag 'ashiato3' %>
 </div>
 <!---->
 
