--- a/pricolla/app/views/pictures/index.html.erb
+++ b/pricolla/app/views/pictures/index.html.erb
@@ -18,14 +18,10 @@
         <td><%= picture.name %></td>
         <td><%= picture.key %></td>
         <td><%= picture.temp_type %></td>
-        <td><%= link_to 'Show', picture %></td>
-        <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
-        <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', picture_path(picture, key: picture.key) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Picture', new_picture_path %>
