--- a/pricolla/app/assets/stylesheets/pk.scss
+++ b/pricolla/app/assets/stylesheets/pk.scss
@@ -4,8 +4,8 @@
 /*フォント*/
 @font-face {
     font-family: 'PixelMplus';
-    src: url(font/PixelMplus10-Regular.eot) format('embedded-opentype');
-    src: url(font/PixelMplus10-Regular.otf) format('opentype');
+    src: url('fonts/PixelMplus10-Regular.eot') format('embedded-opentype');
+    src: url('fonts/PixelMplus10-Regular.otf') format('opentype');
 }
 
 p {
