[add] ポケモンとドラクエを実装

--- a/pricolla/app/views/layouts/dq.html.erb
+++ b/pricolla/app/views/layouts/dq.html.erb
@@ -25,79 +25,79 @@
 
 <!--フレームの名前-->
 <div class="dq_frame_name">
-  <p>あやねる</p>
+  <p><%= @picture.name %></p>
 </div>
 <!---->
 
 <!--職業-->
 <div class="dq_job">
-  <p>せいゆう</p>
+  <p><%= @data[:job] %></p>
 </div>
 <!---->
 
 <!--性別-->
 <div class="dq_sex">
-  <p>おんな</p>
+  <p><%= @data[:sex] %></p>
 </div>
 <!---->
 
 <!--レベル-->
 <div class="dq_level">
-  <p>114514</p>
+  <p><%= @data[:lv] %></p>
 </div>
 <!---->
 
 <!--HP-->
 <div class="hp">
-  <p>1919</p>
+  <p><%= @data[:hp] %></p>
 </div>
 <!---->
 
 <!--MP-->
 <div class="mp">
-  <p>810</p>
+  <p><%= @data[:mp] %></p>
 </div>
 <!---->
 
 <!--ちから-->
 <div class="power">
-  <p>400</p>
+  <p><%= @data[:power] %></p>
 </div>
 <!---->
 
 <!--すばやさ-->
 <div class="speed">
-  <p>200</p>
+  <p><%= @data[:speed] %></p>
 </div>
 <!---->
 
 <!--たいりょく-->
 <div class="pp">
-  <p>500</p>
+  <p><%= @data[:pp] %></p>
 </div>
 <!---->
 
 <!--かしこさ-->
 <div class="clever">
-  <p>2</p>
+  <p><%= @data[:clever] %></p>
 </div>
 <!---->
 
 <!--かしこさ-->
 <div class="lucky">
-  <p>200</p>
+  <p><%= @data[:lucky] %></p>
 </div>
 <!---->
 
 <!--EXP-->
 <div class="exp">
-  <p>580000</p>
+  <p><%= @data[:exp] %></p>
 </div>
 <!---->
 
 <!--説明文-->
 <div class="explain">
-  <p>あやねる</p>
+  <p><%= @data[:text] %></p>
 </div>
 <!---->
 
