--- a/pricolla/app/views/pictures/_form.html.erb
+++ b/pricolla/app/views/pictures/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :temp_type %>
-    <%= f.number_field :temp_type %>
+    <%= f.select :temp_type, [["ポケモン風", 0], ["ドラクエ風", 1]] %>
   </div>
 
   <div class="field">
