--- a/pricolla/app/assets/stylesheets/ds.scss
+++ b/pricolla/app/assets/stylesheets/ds.scss
@@ -4,7 +4,7 @@
 /*フォント*/
 @font-face {
   font-family: 'bokutachi';
-  src: url('font/Boku2-Bold.otf') format('opentype');
+  src: url('fonts/Boku2-Bold.otf') format('opentype');
 }
 
 p {
@@ -103,7 +103,6 @@ body {
 .ds_center {
   top: 356px;
   left: 679px;
-  background-color: ;
   width: 470px;
   z-index: 4;
 
@@ -127,7 +126,6 @@ body {
 .ds_skill {
   top: 476px;
   left: 679px;
-  background-color: ;
   width: 470px;
   z-index: 4;
 }
@@ -148,7 +146,6 @@ body {
 .ds_lines {
   top: 420px;
   left: 195px;
-  background-color: ;
   width: 455px;
   z-index: 4;
 }
