[add] 見栄えを良くした

--- a/pricolla/app/views/layouts/application.html.erb
+++ b/pricolla/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+  <section class="hero is-info">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Pricolla - プリコラ
+        </h1>
+        <h2 class="subtitle">
+          画像をアップロードして自分だけのゲーム風図鑑を作ろう！
+        </h2>
+      </div>
+    </div>
+  </section>
+  <section class="container section">
     <%= yield %>
+  </section>
   </body>
 </html>
