--- a/pricolla/app/views/pictures/_form.html.erb
+++ b/pricolla/app/views/pictures/_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.label "登録名", class: "label"%>
+    <%= f.text_field :name, class: "input" %>
   </div>
 
   <div class="field">
-    <%= f.label :key %>
-    <%= f.text_field :key %>
+    <%= f.label "秘密のキー", class: "label" %>
+    <%= f.text_field :key, class: "input" %>
   </div>
 
   <div class="field">
-    <%= f.label :temp_type %>
+    <%= f.label "テンプレート", class: "label" %>
     <%= f.select :temp_type, [["ポケモン風", 0], ["ドラクエ風", 1], ["シャドバ風", 2], ["デレステ風", 3]] %>
   </div>
 
