--- a/pricolla/app/views/pictures/index.html.erb
+++ b/pricolla/app/views/pictures/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Pictures</h1>
+<h1 class="title">あなたの図鑑</h1>
 
-<table>
+<table class="table is-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>User</th>
-      <th>Type</th>
+      <th>登録名</th>
+      <th>作者</th>
+      <th>タイプ</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,12 +17,12 @@
       <tr>
         <td><%= picture.name %></td>
         <td><%= picture.key %></td>
-        <td><%= picture.temp_type %></td>
-        <td><%= link_to 'Show', picture_path(picture, key: picture.key) %></td>
+        <td><%= temp_type picture.temp_type %></td>
+        <td><%= link_to '表示する！', picture_path(picture, key: picture.key), class: "button  is-info" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Create New Pricolla!!', new_picture_path(key: params[:key]) %>
+<%= link_to '新しい図鑑を作成する！', new_picture_path(key: params[:key]), class: "button is-primary" %>
 
 <br>
